La filtration des élèments fonctionne

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,14 +37,13 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<div class="filter">
-			<input type="button" value="Tous" class="filter-tous">
+			<input type="button" value="Tous" class="filter-no">
 			<input type="button" value="Objets" class="filter-objets">
 			<input type="button" value="Appartements" class="filter-appartements">
 			<input type="button" value="Hôtel & restaurants" class="filter-hotel">
 		</div>
-		<div class="gallery">
-			
-		</div>
+		<div class="gallery"></div>
+
 	</section>
 	<section id="contact">
 		<h2>Contact</h2>
