--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -23,9 +23,9 @@
 		</nav>
 	</header>
 <main>
-    <section class="login-form">
+    <section class="login-style">
         <h2 class="login-title">Log In</h2>
-        <form class="login-form-value" method="get" action="">
+        <form class="login-form" method="POST" action="index-admin.html">
             <label for="email">E-mail</label>
             <input class="login-mail" type="e-mail" name="email" id="email" required>
             <label for="password">Mot de passe</label>
