Fonction delete ok, modale 2 50%

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -25,7 +25,7 @@
 <main>
     <section class="login-style">
         <h2 class="login-title">Log In</h2>
-        <form class="login-form" method="POST" action="index-admin.html">
+        <form class="login-form" method="POST" action="index.html">
             <label for="email">E-mail</label>
             <input class="login-mail" type="e-mail" name="email" id="email" required>
             <label for="password">Mot de passe</label>
