--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -33,8 +33,10 @@
 	<section id="introduction">
 		<figure class="img-bluel">
 			<img src="./assets/images/sophie-bluel.png" alt="">
+			<figcaption class="js-modal" style="display: none"><i class="fa-solid fa-pen-to-square"></i>&ensp;modifier</figcaption>
 		</figure>
 		<article class="presentation-txt">
+			<p class="js-modal" style="display: none;"><i class="fa-solid fa-pen-to-square"></i>&ensp;modifier</p>
 			<h2>Designer d'espace</h2>
 			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
 			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect 
@@ -46,7 +48,7 @@
 	<section id="portfolio">
 		<div class="modal-text-style">
 			<h2>Mes Projets&ensp;&ensp;</h2> 
-			<a href="#modal1" id="modal-link" class="js-modal" style="display: none"><i class="fa-solid fa-pen-to-square"></i></i>&ensp;Modifier</a>
+			<a href="#modal1" id="modal-link" class="js-modal" style="display: none"><i class="fa-solid fa-pen-to-square"></i>&ensp;Modifier</a>
 		</div>
 
 		<aside id="modal1" class="modal" aria-hidden="true" aria-labelledby="modal-title" style="display:none">
@@ -56,9 +58,26 @@
 				<div class="modal-gallery">
 
 				</div>
-				<div class="modal-btn"></div>
+				<div class="modal-btn">
 					<button class="modal-btn-add-photo">Ajouter une photo</button><br>
 					<button class="modal-delete-gallery">Supprimer la galerie</button>
+				</div>
+		</aside>
+		<aside id="modal2" class="modal2" aria-hidden="true" aria-labelledby="modal-title" style="display:none">
+			<div class="modal-wrapper js-modal-stop">
+				<button class="js-close-modal"><i class="fa-solid fa-xmark"></i></button>
+				<h2 id="modal-title">Ajout photo</h2>
+				<div class="modal-add">
+					<img class="modal-add-img">
+					<input type="file" id="file-input" value="+ Ajouter une photo" accept=".jpg, .png">
+				</div>
+				<ul class="list-modal-2">
+					<li class="name-work">Titre</li>
+					<li class="categorie-work">Catégorie</li>
+				</ul>
+				<div class="modal-btn"></div>
+				<a href="#modal2" id="modal-link" class="js-modal" style="display: none">
+					<button class="modal-btn-valid">Valider</button></a><br>
 				</div>
 		</aside>
 
