--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -65,7 +65,10 @@
 		</aside>
 		<aside id="modal2" class="modal2" aria-hidden="true" aria-labelledby="modal-title" style="display:none">
 			<div class="modal-wrapper js-modal-stop">
-				<button class="js-close-modal"><i class="fa-solid fa-xmark"></i></button>
+				<div class="back-close">
+					<button class="back"><i class="fa-solid fa-arrow-left"></i></button>
+					<button class="js-close-modal"><i class="fa-solid fa-xmark"></i></button>
+				</div>
 				<h2 id="modal-title">Ajout photo</h2>
 				<div class="modal-add">
 					<img class="modal-add-img">
