--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -15,9 +15,9 @@
 		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 		<nav>
 			<ul>
-                <a href="index.html#portfolio"><li>projets</li></a>
-                <a href="index.html#contact"><li>contact</li></a>
-                <a href="login.html" class="here" ><li>login</li></a> 
+                <li><a href="index.html#portfolio">projets</a></li>
+                <li><a href="index.html#contact">contact</a></li>
+                <li><a href="login.html" class="here">login</a> </li>
                 <li><img class="instagram-link" src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
 		</nav>
@@ -27,7 +27,7 @@
         <h2 class="login-title">Log In</h2>
         <form class="login-form" method="POST" action="index.html">
             <label for="email">E-mail</label>
-            <input class="login-mail" type="e-mail" name="email" id="email" required>
+            <input class="login-mail" type="email" name="email" id="email" required>
             <label for="password">Mot de passe</label>
             <input class="login-password" type="password" name="password" id="password" required>
             <input class="login-submit-btn" type="submit" value="Se connecter">
@@ -36,7 +36,7 @@
     </section>
 </main>
 	<script src="login.js"></script>
-</body>
+
 <footer>
 	<nav>
 		<ul>
@@ -44,4 +44,5 @@
 		</ul>
 	</nav>
 </footer>
+</body>
 </html>
